--- a/index.html
+++ b/index.html
@@ -6,24 +6,34 @@
   <title>Průvodce Paříží</title>
 
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <main>
 
     <!-- ZDE OBRAZEK: pariz.jpg -->
+<header class="hlavicka">
+  <img class="pariz" src="images/pariz.jpg">
 
-    Průvodce Paříží
+      <h1>Průvodce Paříží</h1>
+    </header>
+  
 
-    Autor: Chad Gipiti, vydáno 1.4.2025
-
+    <div> Chad Gipiti, vydáno 1.4.2025 </div>
+<section class="pruvodceparizi">
     Paříž - město lásky, světel a nekonečné inspirace. Paříž je nejen hlavním městem Francie, ale také jedním z nejnavštěvovanějších měst na světě. Okouzlí vás svou atmosférou, bohatou historií, nezaměnitelnou architekturou a vyhlášenou gastronomií. Ať už vás přitahují historické památky, romantické procházky či kulturní zážitky, Paříž má něco pro každého.
+  </section>
 
+  <section class="historickepamatky">
+    <h2>Historické památky</h2>
 
-
-    Historické památky
-
-    Eiffelova věž
+    <h3>Eiffelova věž</h3>
 
     <!-- ZDE OBRAZEK: eiffelovka.jpg -->
 
@@ -34,14 +44,15 @@
     Vítězný oblouk
 
     Tato monumentální stavba na konci slavného bulváru Champs-Élysées připomíná válečné vítězství Napoleona Bonaparta. Z vrcholu oblouku můžete obdivovat panoramatický výhled na celou Paříž, včetně historických tříd a městských dominant.
-
+  </section>
     <!-- ZDE OBRAZEK: oblouk.jpg -->
-
+     <img class="oblouk" src="images/oblouk.jpg" alt="Oblouk">
+<section>
     Arc de Triomphe byl dokončen v roce 1836 a je zdobený reliéfy znázorňujícími významné bitvy a vojenská vítězství. Pod obloukem se nachází hrob Neznámého vojína, který připomíná vojáky padlé během prvn śwové války. Každý večer zde hoří věčný plamen jako symbol vzpomínky.
 
     Bulvár Champs-Élysées, který se rozprostírá od Vítězného oblouku až k náměstí Place de la Concorde, je jednou z nejznámějších a nejnavštěvovanějších ulic na světě. Toto místo je centrem nejen turistického, ale i společenského života, plné luxusních obchodů, kaváren, kin a restaurací. Každoročně se zde koná mnoho akcí, včetně slavné vojenské přehlídky na Den dobytí Bastily a velkolepé oslavy Silvestra.
 
-
+  </section>
 
     Kulturní klenoty
 
