--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     Tato monumentální stavba na konci slavného bulváru Champs-Élysées připomíná válečné vítězství Napoleona Bonaparta. Z vrcholu oblouku můžete obdivovat panoramatický výhled na celou Paříž, včetně historických tříd a městských dominant.
   
     <!-- ZDE OBRAZEK: oblouk.jpg -->
-     <img class="oblouk" src="images/oblouk.jpg" alt="Oblouk">
+     <img class="eiffelovka" src="images/eiffelovka.jpg" alt="Eiffelova věž">
 
     Arc de Triomphe byl dokončen v roce 1836 a je zdobený reliéfy znázorňujícími významné bitvy a vojenská vítězství. Pod obloukem se nachází hrob Neznámého vojína, který připomíná vojáky padlé během prvn śwové války. Každý večer zde hoří věčný plamen jako symbol vzpomínky.
 
