Změna pozice obrázku

--- a/index.html
+++ b/index.html
@@ -35,19 +35,22 @@
     <h2>Historické památky</h2>
 
     <h3>Eiffelova věž</h3>
+    <img class="eiffelovka" src="images/eiffelovka.jpg" alt="Eiffelova věž">
 
     <!-- ZDE OBRAZEK: eiffelovka.jpg -->
 
     Symbol Paříže a zároveň jeden z nejznámějších památníků světa. Postavena byla Gustave Eiffelem pro Světovou výstavu v roce 1889 a od té doby se stala ikonou města. Věž je vysoká 324 metrů a nabízí návštěvníkům dechberoucí výhled na město. Večer se věž rozzáří tisíci světly, což vytváří nezapomenutelný zážitek.
 
     Původně však byla věž mezi Pařížany kontroverzní, mnozí ji dokonce považovali za nevzhlednou. S postupem času se však stala milovaným symbolem francouzské hrdosti a inženýrského mistrovství. Věž disponuje třemi úrovněmi přístupnými veřejnosti, přičemž v první a druhé najdete restaurace a obchůdky se suvenýry. Každý rok věž navštíví miliony turistů z celého světa, a tak je dobré naplánovat návštěvu s předstihem, aby se zabránilo dlouhým frontám.
-
-    Vítězný oblouk
+  </section>
+  <section class="viteznyoblouk">
+    <h3>Vítězný oblouk</h3>
+    
 
     Tato monumentální stavba na konci slavného bulváru Champs-Élysées připomíná válečné vítězství Napoleona Bonaparta. Z vrcholu oblouku můžete obdivovat panoramatický výhled na celou Paříž, včetně historických tříd a městských dominant.
   
     <!-- ZDE OBRAZEK: oblouk.jpg -->
-     <img class="eiffelovka" src="images/eiffelovka.jpg" alt="Eiffelova věž">
+   
 
     Arc de Triomphe byl dokončen v roce 1836 a je zdobený reliéfy znázorňujícími významné bitvy a vojenská vítězství. Pod obloukem se nachází hrob Neznámého vojína, který připomíná vojáky padlé během prvn śwové války. Každý večer zde hoří věčný plamen jako symbol vzpomínky.
 
